--- a/package.json
+++ b/package.json
@@ -117,6 +117,11 @@
           "type": "array",
           "default": [],
           "description": "%remoteUris%"
+        },
+        "common-intellisense.localUris": {
+          "type": "array",
+          "default": [],
+          "description": "%localUris%"
         }
       }
     },
