chore: 优化TS声明拆分过大的文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "commentTranslate.targetLanguage": "en",
-  "editor.inlineSuggest.showToolbar": "always"
+  "editor.inlineSuggest.showToolbar": "always",
+  "editor.codeActionsOnSave": { //  启用保存时自动修复,默认只支持.js文件
+    "source.fixAll.eslint": "explicit"
+  },
+  "editor.tabSize": 2
 }
