feat: support primevue4

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
               "vuetify3",
               "chakraUiReact2",
               "primevue3",
+              "primevue4",
               "quasar2",
               "nextui2",
               "nuxtui2",
