--- a/package.json
+++ b/package.json
@@ -38,7 +38,14 @@
     "Arco Design",
     "UView",
     "Taro",
-    "NutUI"
+    "NutUI",
+    "Vant",
+    "Naive UI",
+    "Varlet",
+    "Bits UI",
+    "Opentiny",
+    "TDesign",
+    "HeadlessUI"
   ],
   "categories": [
     "Other"
