--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "homepage": "https://github.com/common-intellisense/common-intellisense#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/common-intellisense/common-intellisense"
+    "url": "git+https://github.com/common-intellisense/common-intellisense.git"
   },
   "bugs": {
     "url": "https://github.com/common-intellisense/common-intellisense/issues"
