--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "@babel/types": "^7.26.0",
     "@rollup/pluginutils": "^5.1.3",
     "@simon_he/fetch-npm": "^0.0.12",
+    "@simon_he/fetch-npm-cjs": "^0.0.13",
     "@simon_he/latest-version": "^0.1.2",
     "@types/node": "^18.19.63",
     "@types/vscode": "1.77.0",
