feat: support uniapp

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "MantineUI",
     "WotDesign",
     "Ark UI",
-    "Dcloudio UniUi"
+    "Dcloudio UniUi",
+    "Dcloudio UniApp"
   ],
   "categories": [
     "Other"
