--- a/package.json
+++ b/package.json
@@ -183,30 +183,30 @@
     "release": "bumpp && pnpm run publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.12.0",
-    "@babel/types": "^7.26.3",
+    "@antfu/eslint-config": "^3.16.0",
+    "@babel/types": "^7.26.8",
     "@rollup/pluginutils": "^5.1.4",
     "@simon_he/fetch-npm": "^0.0.21",
     "@simon_he/fetch-npm-cjs": "^0.0.22",
     "@simon_he/latest-version": "^0.1.13",
-    "@types/node": "^18.19.68",
-    "@types/vscode": "^1.75.1",
+    "@types/node": "^18.19.75",
+    "@types/vscode": "1.75.1",
     "@typescript-eslint/typescript-estree": "^6.21.0",
     "@vscode-use/createwebview": "^0.0.13",
     "@vscode-use/utils": "0.1.46",
-    "@vscode/vsce": "^3.2.1",
-    "@vue-vine/compiler": "^0.1.41",
+    "@vscode/vsce": "^3.2.2",
+    "@vue-vine/compiler": "^0.1.42",
     "@vue/compiler-sfc": "3.3.4",
     "bing-translate-api": "^2.10.0",
-    "bumpp": "^9.9.2",
+    "bumpp": "^9.11.1",
     "eslint": "^8.57.1",
-    "fast-glob": "^3.3.2",
+    "fast-glob": "^3.3.3",
     "find-up": "^6.3.0",
     "ofetch": "^1.4.1",
-    "prettier": "^3.4.2",
-    "svelte": "^5.15.0",
+    "prettier": "^3.5.0",
+    "svelte": "^5.19.9",
     "tsup": "^6.7.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "vitest": "^0.29.8"
   }
 }
