--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,31 +12,6 @@ on:
   merge_group: {}
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      - name: Set node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18.18.2
-          cache: pnpm
-
-      - name: Setup
-        run: npm i -g @antfu/ni
-
-      - name: Install
-        run: nci
-
-      - name: Lint
-        run: nr lint
-
   test:
     runs-on: ${{ matrix.os }}
 
@@ -59,17 +34,18 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
       - name: Set node ${{ matrix.node_version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node_version }}
-          cache: pnpm
 
+      # `npm i -g corepack@latest;` and  `corepack prepare pnpm@latest --activate;` are necessary to get the latest
+      # version of corepack, which has a fix for https://github.com/nodejs/corepack/issues/612
+      # (related https://github.com/pnpm/pnpm/issues/9029), so it can install pnpm.
+      # Those two can probably go away once the devcontainer is using a version of Node which includes a version corepack
+      # with the fix.
+
+      - run: npm i -g corepack@latest --force
       - run: corepack enable
 
       - name: Setup
@@ -83,6 +59,3 @@ jobs:
 
       - name: Test
         run: nr test
-
-      - name: Typecheck
-        run: nr typecheck
