--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,53 +9,60 @@ on:
     branches:
       - main
 
-  merge_group: {}
-
 jobs:
+  lint_and_typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4.1.0
+
+      - name: Set node
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: pnpm
+
+      - name: Install
+        run: pnpm i
+
+      - name: Build
+        run: pnpm run build
+
+      - name: Lint
+        run: pnpm lint
+
+      - name: Typecheck
+        run: pnpm typecheck
+
   test:
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        node_version: [18.18.2, lts/*]
-        include:
-          - os: macos-latest
-            node_version: lts/*
-          - os: windows-latest
-            node_version: lts/*
+        node: [lts/*]
+        os: [ubuntu-latest, windows-latest, macos-latest]
       fail-fast: false
 
     steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-
       - uses: actions/checkout@v4
 
-      - name: Set node ${{ matrix.node_version }}
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4.1.0
+
+      - name: Set node ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node_version }}
-
-      # `npm i -g corepack@latest;` and  `corepack prepare pnpm@latest --activate;` are necessary to get the latest
-      # version of corepack, which has a fix for https://github.com/nodejs/corepack/issues/612
-      # (related https://github.com/pnpm/pnpm/issues/9029), so it can install pnpm.
-      # Those two can probably go away once the devcontainer is using a version of Node which includes a version corepack
-      # with the fix.
-
-      - run: npm i -g corepack@latest --force
-      - run: corepack enable
-
-      - name: Setup
-        run: npm i -g @antfu/ni
+          node-version: ${{ matrix.node }}
+          cache: pnpm
 
       - name: Install
-        run: nci
+        run: pnpm i
 
       - name: Build
-        run: nr build
+        run: pnpm run build
 
       - name: Test
-        run: nr test
+        run: pnpm run test
