--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "common-intellisense",
   "displayName": "%displayName%",
   "version": "0.2.76",
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.4.1",
   "description": "%description%",
   "author": "Simon He <https://github.com/Simon-He95>",
   "license": "MIT",
@@ -126,6 +126,11 @@
           },
           "description": "%uiDescription%"
         },
+        "common-intellisense.translate": {
+          "type": "boolean",
+          "default": true,
+          "description": "%useTranslateDescription%"
+        },
         "common-intellisense.showSlots": {
           "type": "boolean",
           "default": true,
@@ -190,6 +195,7 @@
     "@simon_he/fetch-npm": "^0.0.21",
     "@simon_he/fetch-npm-cjs": "^0.0.22",
     "@simon_he/latest-version": "^0.1.13",
+    "@simon_he/translate": "^0.0.8",
     "@types/node": "^18.19.76",
     "@types/vscode": "1.75.1",
     "@typescript-eslint/typescript-estree": "^6.21.0",
@@ -203,6 +209,7 @@
     "eslint": "^8.57.1",
     "fast-glob": "^3.3.3",
     "find-up": "^6.3.0",
+    "lazy-js-utils": "^0.1.31",
     "ofetch": "^1.4.1",
     "prettier": "^3.5.1",
     "svelte": "^5.20.1",
