--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "@simon_he/fetch-npm-cjs": "^0.0.22",
     "@simon_he/latest-version": "^0.1.13",
     "@simon_he/translate": "^0.0.9",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.19.79",
     "@types/vscode": "1.75.1",
     "@typescript-eslint/typescript-estree": "^6.21.0",
@@ -210,6 +211,7 @@
     "fast-glob": "^3.3.3",
     "find-up": "^6.3.0",
     "get-lib-version": "^0.0.2",
+    "js-yaml": "^4.1.0",
     "lazy-js-utils": "^0.1.31",
     "ofetch": "^1.4.1",
     "prettier": "^3.5.3",
