--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,5 @@
 packages:
   - playground
   - examples/*
+patchedDependencies:
+  '@vue/compiler-core@3.5.16': patches/@vue__compiler-core@3.5.16.patch
