--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, 'feat/**']
   pull_request:
     branches: [main]
 
@@ -49,3 +49,6 @@ jobs:
 
       - name: Run tests
         run: pnpm exec vitest run --reporter dot
+
+      - name: Run translate dry-run test
+        run: pnpm -s run test:translate
