--- a/package.json
+++ b/package.json
@@ -185,9 +185,16 @@
   "scripts": {
     "dev": "tsup src/index.ts --external vscode --watch",
     "test": "vitest",
+    "translate": "node scripts/translate-directives.js",
+    "translate:report": "node scripts/translate-directives.js --report",
+    "translate:report:diff": "node scripts/translate-directives.js --report --diff",
+    "translate:apply": "node scripts/translate-directives.js --apply --report",
+    "test:translate": "vitest run test/scripts/translate-directives.test.ts",
     "build": "tsup src/index.ts --external vscode --minify",
     "pack": "vsce package --no-dependencies",
     "lint": "eslint . --cache",
+    "prepare": "husky install",
+    "test:staged": "git diff --staged --name-only --relative | grep -E '\\.(ts|tsx|js)$' | xargs -r pnpm -s exec vitest run --findRelatedTests",
     "lint:fix": "eslint . --fix",
     "publish": "vsce publish --no-dependencies",
     "typecheck": "tsc --noEmit",
@@ -195,6 +202,8 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
+    "@babel/parser": "^7.23.0",
+    "@babel/traverse": "^7.23.0",
     "@babel/types": "^7.28.4",
     "@rollup/pluginutils": "^5.3.0",
     "@simon_he/fetch-npm": "^0.0.22",
@@ -216,15 +225,15 @@
     "fast-glob": "^3.3.3",
     "find-up": "^6.3.0",
     "get-lib-version": "^0.0.2",
+    "husky": "^8.0.0",
     "js-yaml": "^4.1.0",
     "lazy-js-utils": "^0.1.48",
+    "lint-staged": "^14.0.0",
     "ofetch": "^1.4.1",
     "prettier": "^3.6.2",
     "svelte": "^5.39.10",
     "tsup": "^6.7.0",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4",
-    "@babel/parser": "^7.23.0",
-    "@babel/traverse": "^7.23.0"
+    "vitest": "^3.2.4"
   }
 }
