--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "common-intellisense",
   "displayName": "%displayName%",
   "version": "0.3.4",
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.24.0",
   "description": "%description%",
   "author": "Simon He <https://github.com/Simon-He95>",
   "license": "MIT",
@@ -183,14 +183,14 @@
     ]
   },
   "scripts": {
-    "dev": "tsup src/index.ts --external vscode --watch",
+    "dev": "tsup src/index.ts --external vscode --watch cjs",
     "test": "vitest",
     "translate": "node scripts/translate-directives.js",
     "translate:report": "node scripts/translate-directives.js --report",
     "translate:report:diff": "node scripts/translate-directives.js --report --diff",
     "translate:apply": "node scripts/translate-directives.js --apply --report",
     "test:translate": "vitest run test/scripts/translate-directives.test.ts",
-    "build": "tsup src/index.ts --external vscode --minify",
+    "build": "tsup src/index.ts --external vscode --minify --format cjs",
     "pack": "vsce package --no-dependencies",
     "lint": "eslint . --cache",
     "prepare": "husky install",
@@ -200,38 +200,40 @@
     "typecheck": "tsc --noEmit",
     "release": "bumpp && pnpm run publish"
   },
+  "peerDependencies": {
+    "lazy-js-utils": "^0.1.49"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
-    "@babel/parser": "^7.23.0",
-    "@babel/traverse": "^7.23.0",
-    "@babel/types": "^7.28.4",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@rollup/pluginutils": "^5.3.0",
-    "@simon_he/fetch-npm": "^0.0.22",
-    "@simon_he/fetch-npm-cjs": "^0.0.26",
-    "@simon_he/latest-version": "^0.1.14",
-    "@simon_he/translate": "^0.0.9",
+    "@simon_he/fetch-npm": "^0.0.25",
+    "@simon_he/fetch-npm-cjs": "^0.0.30",
+    "@simon_he/latest-version": "^0.1.15",
+    "@simon_he/translate": "^0.0.13",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^18.19.129",
+    "@types/node": "^18.19.130",
     "@types/vscode": "1.75.1",
-    "@typescript-eslint/typescript-estree": "^8.46.0",
+    "@typescript-eslint/typescript-estree": "^8.48.1",
     "@vscode-use/createwebview": "^0.0.13",
     "@vscode-use/utils": "0.1.47",
-    "@vscode/vsce": "^3.6.2",
+    "@vscode/vsce": "^3.7.1",
     "@vue-vine/compiler": "^0.1.42",
     "@vue/compiler-sfc": "3.5.18",
     "bing-translate-api": "^2.10.0",
     "bumpp": "^9.11.1",
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.1",
     "fast-glob": "^3.3.3",
     "find-up": "^6.3.0",
     "get-lib-version": "^0.0.2",
-    "husky": "^8.0.0",
-    "js-yaml": "^4.1.0",
-    "lazy-js-utils": "^0.1.48",
-    "lint-staged": "^14.0.0",
-    "ofetch": "^1.4.1",
-    "prettier": "^3.6.2",
-    "svelte": "^5.39.10",
+    "husky": "^8.0.3",
+    "js-yaml": "^4.1.1",
+    "lint-staged": "^14.0.1",
+    "ofetch": "^1.5.1",
+    "prettier": "^3.7.4",
+    "svelte": "^5.45.6",
     "tsup": "^6.7.0",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
