feat: enhance UI type extraction and improve completion updates
- Added `clearTypeCache` call to `findUI` for better cache management.
- Updated `updateCompletions` to include `pkgPath` in options for improved context.
- Enhanced `fixedTagName` function to handle tag names with dots more effectively.
- Improved type detail handling in `propsReducer` for better documentation output.
- Introduced new tests for type extraction from React and local types, ensuring accurate prop and event extraction.
- Configured Vitest for testing environment setup.

--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
     "pack": "vsce package --no-dependencies",
     "lint": "eslint . --cache",
     "prepare": "husky install",
-    "test:staged": "git diff --staged --name-only --relative | grep -E '\\.(ts|tsx|js)$' | xargs -r pnpm -s exec vitest run --findRelatedTests",
+    "test:staged": "git diff --staged --name-only --relative | grep -E '\\.(ts|tsx|js)$' | xargs -r pnpm -s exec vitest related",
     "lint:fix": "eslint . --fix",
     "publish": "vsce publish --no-dependencies",
     "typecheck": "tsc --noEmit",
