--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
     "@vscode/vsce": "^3.7.1",
     "@vue-vine/compiler": "^0.1.42",
     "@vue/compiler-sfc": "3.5.18",
+    "baseline-browser-mapping": "^2.9.19",
     "bing-translate-api": "^2.10.0",
     "bumpp": "^9.11.1",
     "eslint": "^9.39.1",
