feat: improve parser caching and harden remote fetch pipeline

--- a/package.json
+++ b/package.json
@@ -168,6 +168,11 @@
           "type": "array",
           "default": [],
           "description": "%localUris%"
+        },
+        "common-intellisense.trustedHosts": {
+          "type": "array",
+          "default": [],
+          "description": "%trustedHosts%"
         }
       }
     },
